--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Bass Number System Quiz</title>
+  <title>Scale Driller</title>
   <style>
     body {
       font-family: sans-serif;
