--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="centered-wrapper">
-  <div class="card" id="setupContainer">
+  <div class="card" id="setupContainer" style="width: 100%; max-width: 500px; box-sizing: border-box;">
     <h1>Scale Driller</h1>
 
     <div class="input-group">
@@ -63,7 +63,7 @@
 </div>
 
 <div id="quizOverlay" class="centered-wrapper">
-  <div class="card" style="position: relative;">
+  <div class="card" style="position: relative; width: 100%; max-width: 500px; box-sizing: border-box;">
     <button id="closeQuizBtn" onclick="closeQuiz()" style="position: absolute; top: 0.5rem; left: 0.5rem; font-size: 1.5rem; background: none; border: none; cursor: pointer; width: 2rem; height: 2rem; line-height: 1.5rem; text-align: center; padding: 0;">&times;</button>
     <div id="quiz">
 
@@ -77,7 +77,7 @@
 </div>
 
 <div class="centered-wrapper">
-  <div class="card" id="result" style="display: none;">
+  <div class="card" id="result" style="display: none; width: 100%; max-width: 500px; box-sizing: border-box;">
     <h2>Quiz Complete!</h2>
     <p>Your Score: <span id="score"></span></p>
     <button onclick="startQuiz()">Play Again</button>
